feat: 完成第一个可用版本

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "lib/index",
   "scripts": {
     "lint": "eslint lib test",
-    "test": "mocha --require should --reporter spec --recursive --bail --check-leaks test/",
-    "cov": "istanbul cover _mocha -- --require should --recursive --bail --check-leaks test/ -R spec",
-    "travis": "istanbul cover _mocha --report lcovonly -- --require should --recursive --bail --check-leaks test/ -R spec",
+    "test": "mocha --require should --reporter spec --recursive --bail --timeout 10000 test/",
+    "cov": "istanbul cover _mocha -- --require should --recursive --bail test/ -R spec",
+    "travis": "istanbul cover _mocha --report lcovonly -- --require should --recursive --bail test/ -R spec",
     "ci": "npm run lint && npm run test && npm run travis",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -o CHANGELOG.md -s"
   },
@@ -15,23 +15,29 @@
     "lib"
   ],
   "dependencies": {
+    "output-formatter": "~1.0.1",
+    "plover-logger": "~1.4.1"
   },
   "devDependencies": {
-    "conventional-changelog-cli": "~1.1.1",
-    "eslint": "~2.8.0",
+    "conventional-changelog-cli": "~1.2.0",
+    "eslint": "~2.12.0",
     "eslint-config-bce": "~1.2.0",
     "istanbul": "~0.4.1",
-    "mocha": "~2.4.5",
-    "should": "~8.3.1"
+    "mocha": "~2.5.3",
+    "should": "~9.0.2"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/plover-modules/plover.git"
+    "url": "git+https://github.com/plover-modules/plover-benchmark.git"
+  },
+  "plover": {
+    "plugin": "lib/plugin",
+    "level": 1
   },
   "author": "bencode@163.com",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/plover-modules/plover/issues"
+    "url": "https://github.com/plover-modules/plover-benchmark/issues"
   },
-  "homepage": "https://github.com/plover-modules/plover#readme"
+  "homepage": "https://github.com/plover-modules/plover-benchmark#readme"
 }
