--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "eslint-config-bce": "~1.2.0",
     "istanbul": "~0.4.1",
     "mocha": "~2.5.3",
-    "should": "~9.0.2"
+    "plover": "~2.2.0",
+    "plover-arttemplate": "~1.1.1",
+    "should": "~9.0.2",
+    "supertest": "~1.2.0"
   },
   "repository": {
     "type": "git",
