--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index",
   "scripts": {
     "lint": "eslint lib test",
-    "test": "mocha --require should --reporter spec --recursive --bail --timeout 10000 test/",
+    "test": "mocha --require should --reporter spec --recursive --bail test/",
     "cov": "istanbul cover _mocha -- --require should --recursive --bail test/ -R spec",
     "travis": "istanbul cover _mocha --report lcovonly -- --require should --recursive --bail test/ -R spec",
     "ci": "npm run lint && npm run test && npm run travis",
@@ -21,18 +21,18 @@
   "devDependencies": {
     "co": "~4.6.0",
     "conventional-changelog-cli": "~1.2.0",
-    "eslint": "~2.12.0",
-    "eslint-config-bce": "~1.2.0",
+    "eslint": "~3.7.1",
+    "eslint-config-bce": "~1.3.0",
     "istanbul": "~0.4.1",
-    "mocha": "~2.5.3",
-    "plover": "~2.2.0",
-    "plover-arttemplate": "~1.1.1",
-    "should": "~9.0.2",
-    "supertest": "~1.2.0"
+    "mocha": "~3.1.0",
+    "plover": "~2.8.1",
+    "plover-arttemplate": "~3.0.0",
+    "should": "~11.1.0",
+    "supertest": "~2.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/plover-modules/plover-benchmark.git"
+    "url": "git+https://github.com/ploverjs/plover-benchmark.git"
   },
   "plover": {
     "plugin": "lib/plugin",
@@ -41,7 +41,7 @@
   "author": "bencode@163.com",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/plover-modules/plover-benchmark/issues"
+    "url": "https://github.com/ploverjs/plover-benchmark/issues"
   },
-  "homepage": "https://github.com/plover-modules/plover-benchmark#readme"
+  "homepage": "https://github.com/ploverjs/plover-benchmark#readme"
 }
